k8s-rpi-apps-ingresses/photoprism-ingress/photoprism-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-s3-shared
  labels:
    app.kubernetes.io/name: photoprism-s3
  annotations:
    service.cilium.io/global: "true"    
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 2342
  selector:
    app.kubernetes.io/name: photoprism-s3
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism-ingress
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<photoprismhostname>.<domainname>`)
    middlewares:
      - name: svc-https-headers
    kind: Rule
    services:
    - name: photoprism-s3-shared
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<photoprismhostname>.<domainname>`) 
    middlewares:
      - name: redirect-to-https
    kind: Rule
    services:
    - name: photoprism-s3-shared
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-https-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
